--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="label_continue">Continue</string>
+
+    <string name="login_as_user">Login As User</string>
+    <string name="login_as_admin">Login As Admin</string>
+
 </resources>
