--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="empty_state">Enter state or provience</string>
     <string name="empty_country">Enter country</string>
     <string name="empty_pincode">Enter pincode</string>
+
+    <string name="admin">Admin</string>
 </resources>
