--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,8 @@
     <string name="nurse">Nurse</string>
     <string name="nanny">Nanny</string>
     <string name="search_hint">Search Nanny/Nurse</string>
+
+    <string name="forgot_password">Forgot Password</string>
+    <string name="email_not_exist">No user exist with this email address</string>
+    <string name="pass_sent">Password has been sent to </string>
 </resources>
