Profile activity design code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,7 @@
     <string name="empty_user_type">Select User Type</string>
     <string name="email_exist">Email address already exist</string>
     <string name="phone_exist">Phone number already exist</string>
+
+    <string name="edit">Edit</string>
+    <string name="other_information">Other Information</string>
 </resources>
