User Item View Xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
 
     <string name="edit">Edit</string>
     <string name="other_information">Other Information</string>
+
+    <string name="book">Book</string>
 </resources>
