--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,4 +77,11 @@
     <string name="other_information">Other Information</string>
 
     <string name="book">Book</string>
+    <string name="booking_request">Booking Request</string>
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+    <string name="from_date">From</string>
+    <string name="to_date">To</string>
+    <string name="submit">Submit</string>
+    <string name="cancel">Cancel</string>
 </resources>
