--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,9 @@
     <string name="search">Search</string>
 
     <string name="delete">Delete</string>
+    <string name="warning_title">Warning</string>
+    <string name="warning_msg">This User will be permanently deleted. Are you sure?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="user_deleted">User has been deleted successfully</string>
 </resources>
