--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="user_deleted">User has been deleted successfully</string>
-
     <string name="empty_booking">Currently you have No booking</string>
+    <string name="message">Message</string>
 </resources>
