--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,4 +115,6 @@
     <string name="accept">Accept</string>
     <string name="end_contract">End Contract</string>
     <string name="feedback">Feedback</string>
+
+    <string name="reviews">Reviews</string>
 </resources>
