--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,13 @@
     <string name="feedback">Feedback</string>
 
     <string name="reviews">Reviews</string>
+
+    <string name="email1">Email</string>
+    <string name="reject">Reject</string>
+    <string name="booking_request_on">Booking request on: </string>
+    <string name="pending">Pending</string>
+    <string name="canceled">Canceled</string>
+    <string name="completed">Completed</string>
+    <string name="on_going">On going</string>
+    <string name="rejected">Rejected</string>
 </resources>
