--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -131,4 +131,5 @@
     <string name="feedback_submit">Feeback submitted successfully</string>
 
     <string name="book_now">Book Now</string>
+    <string name="change_password">Change Password</string>
 </resources>
