booking list display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,4 +132,6 @@
 
     <string name="book_now">Book Now</string>
     <string name="change_password">Change Password</string>
+
+    <string name="refresh">Refresh</string>
 </resources>
