Change Password design & some changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,6 @@
     <string name="change_password">Change Password</string>
 
     <string name="refresh">Refresh</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
 </resources>
